--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,10 @@ h2 {
   font-size: 36px;
 }
 
+.h2-start {
+  text-align: start;
+}
+
 .header-paragraph {
   font-family: var(--default-font);
   font-weight: 400;
@@ -71,6 +75,15 @@ h2 {
 
 .button-primary:hover {
   opacity: 0.9;
+}
+
+.responsive-profile-picture {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  width: 150px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 15px;
 }
 
 .profile-picture {
@@ -153,6 +166,10 @@ footer {
 }
 
 @media (max-width: 992px) {
+  header {
+    margin: 60px 0;
+  }
+  
   h1 {
     font-size: 38px;
   }
@@ -163,11 +180,58 @@ footer {
 
   .header-paragraph {
     font-size: 14px;
+    padding: 10px 30px;
   }
 
   .button-primary {
     padding: 15px 25px;
     margin: 10px 10px 30px 10px;
+  }
+
+  main {
+    margin: 0 20px;
+  }
+  
+  .skills-list {
+    display: flex;
+    justify-content: center;
+    
+  }
+  
+  .skill-list {
+    padding: 20px 0;
+    font-size: 12px;
+  }
+
+  .work-inquiry {
+    display: block;
+    padding: 30px;
+    margin: 30px;
+    border-radius: 16px;
+  }
+
+  .work-inquiry h2 {
+    text-align: center;
+  }
+
+  .work-inquiry-button .button-primary {
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .work-inquiry-text {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .contact-icon {
+    margin: 0 15px 20px 15px;
+  }
+
+  .footer-paragraph {
+    font-size: 10px;
+    padding: 0 20px;
   }
 }
 
