adjusted button margin

--- a/src/style.css
+++ b/src/style.css
@@ -216,7 +216,7 @@ footer {
 
   .work-inquiry-button .button-primary {
     display: block;
-    margin: 0 auto;
+    margin: 0 40px;
   }
   
   .work-inquiry-text {
