--- a/src/style.css
+++ b/src/style.css
@@ -200,7 +200,7 @@ footer {
 }
 
 .about p {
-  margin-top: 20px;
+  margin-top: 15 px;
 }
 
 .about p a {
@@ -218,7 +218,7 @@ footer {
   }
   
   h1 {
-    font-size: 38px;
+    font-size: 31px;
     text-align: center;
   }
 
@@ -303,6 +303,10 @@ footer {
     padding: 20px 20px 60px 20px;
     text-align: justify;
   }
+}
+
+.card-custom {
+  margin: 20px;
 }
 
 
