made all sites SEO friendly and  improved navbar

--- a/src/style.css
+++ b/src/style.css
@@ -27,10 +27,6 @@ body {
   margin: 0 0 0 20px;
 }
 
-.nav-link-custom {
-  font-weight: 600;
-  color: var(--secondary-color);
-}
 
 header {
   margin: 60px 30px;
@@ -128,6 +124,7 @@ main h2 {
   background-color: var(--secondary-color);
   border-radius: 10px;
   box-shadow: --var(--default-box-shadow);
+  padding-bottom: 35px;
 }
 
 .skills-list-container h2 {
