--- a/src/style.css
+++ b/src/style.css
@@ -125,12 +125,15 @@ main h2 {
   border-radius: 10px;
   box-shadow: --var(--default-box-shadow);
   padding-bottom: 35px;
-  padding-right: 20px;
 }
 
 .skills-list-container h2 {
   color: white;
   padding: 20px 0 15px 60px;
+}
+
+.skill-list  ul {
+  padding: 10px;
 }
 
 .skills-list {
@@ -282,6 +285,9 @@ body.contact-page {
  padding-left: 11px;
 }
 
+
+
+
 @media (max-width: 768px) {
   header {
     margin: 60px 0;
@@ -325,10 +331,6 @@ body.contact-page {
     display: flex;
     justify-content: center;
   }
-  
-  .skill-list {
-    padding: 10px 0;
-  }
 
   .skill-list li {
     font-size: 10px;
@@ -361,7 +363,6 @@ body.contact-page {
     padding: 5px 10px;
     margin: 0 5px;
   }
-
 
   .footer-paragraph {
     font-size: 10px;
