worked on the work page, cards need to be redone

--- a/src/style.css
+++ b/src/style.css
@@ -240,21 +240,21 @@ footer p {
 }
 
 .card-custom {
-  background-color: var(--primary-color);
-  border: var(--primary-color);
-  box-shadow: var(--default-box-shadow);
-  border-radius: 10px;
-  margin-bottom: 30px;
+  background-color: var(--primary-color) !important;
+  border: var(--primary-color) !important;
+  box-shadow: var(--default-box-shadow) !important;
+  border-radius: 10px !important;
 }
 
+.card-image-container {
+  width: 250px !important;
+  height: 250px !important;
+}
 
 .card-image-custom {
-  width: 300px;
-  height: 200px;
   display: block;
-  margin: 10px auto;
+  margin: 0 auto;
   border-radius: 10px;
-  border: 1px solid var(--secondary-color);
 }
 
 body.contact-page {
