deleted bootstrap cards on work page and build custom cards

--- a/src/style.css
+++ b/src/style.css
@@ -239,26 +239,27 @@ footer p {
   opacity: 0.9;
 }
 
-.card-custom {
-  background-color: var(--primary-color) !important;
-  border: var(--primary-color) !important;
-  box-shadow: var(--default-box-shadow) !important;
-  border-radius: 10px !important;
+.project-container {
+  background-color: var(--primary-color);
+  padding: 20px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
 
-.card-image-container {
-  width: 250px !important;
-  height: 250px !important;
-}
-
-.card-image-custom {
+.project-img-container {
   display: block;
   margin: 0 auto;
+}
+
+.project-img-custom {
+  width: 250px;
+  height: 200px;
   border-radius: 10px;
 }
 
 body.contact-page {
   background-color: var(--primary-color);
+  box-shadow: var(--default-box-shadow);
 }
 
 .contact-container {
