--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 :root {
-  --primary-color: #F6F7F0;
-  --secondary-color: #252716;
-  --text-opacity-color: #242422;
-
+  --primary-color:#E9E4D4;
+  --secondary-color: #003140;
+  --text-opacity-color: #293235;
+--dark-beige: #C7BEB4;
   --heading-font: "Playfair Display", serif;
   --default-font: "Poppins", sans-serif;
 
@@ -10,7 +10,8 @@
 }
 
 body {
-  font-family: var(--default-font);
+  font-family: var(--default-font); 
+  color: var(--text-opacity-color);
 }
 
 .page-container {
@@ -34,6 +35,7 @@ header {
 
 h1, h2, h3 {
   text-align: center;
+  color: #181d1f;
 }
 
 h1 {
@@ -43,7 +45,6 @@ h1 {
 }
 
 h2 {
-  color: var(--text-opacity-color);
   font-weight: 600;
   font-size: 36px;
 }
@@ -65,8 +66,8 @@ p {
 }
 
 .header-links {
-  text-decoration: underline;
-  color: var(--text-opacity-color)
+  text-decoration: none;
+  color: var(--secondary-color);
 }
 
 .header-links:hover {
@@ -101,14 +102,13 @@ p {
   margin: 0 auto;
   margin-bottom: 30px;
   width: 150px;
-  border: 1px solid var(--secondary-color);
   border-radius: 15px;
 }
 
 .profile-picture {
   width: 350px;
-  border: 1px solid var(--secondary-color);
   border-radius: 150px;
+  box-shadow: var(--box-shadow);
 }
 
 main {
@@ -170,6 +170,7 @@ main h2 {
 footer {
   margin: 150px 0 30px 0;
   font-weight: 500;
+  color: var(--secondary-color);
 }
 
 footer .contact-icons {
@@ -177,7 +178,7 @@ footer .contact-icons {
   justify-content: center;
 }
 
-footer .contact-icons a, .contact-container a .contact-icon {
+footer .contact-icons a {
   margin: 0 30px 0 30px;
   padding: 12px 20px;
   border-radius: 50%;
@@ -190,18 +191,16 @@ footer .contact-icons a, .contact-container a .contact-icon {
 footer .contact-icons a:hover {
   cursor: pointer;
   opacity: 0.9;
-  color: white;
-  background-color: var(--secondary-color);
 }
 
 footer p {
-  margin-top: 30px;
+  margin-top: 60px;
   text-align: center;
   opacity: 0.9;
 }
 
 .footer-paragraph a {
-  color: var(--text-opacity-color);
+  color: var(--secondary-color);
 }
 
 .footer-paragraph a:hover {
@@ -232,6 +231,7 @@ footer p {
 }
 
 .content p a {
+  text-decoration: none;
   color: var(--secondary-color);
 }
 
@@ -257,37 +257,38 @@ footer p {
   border-radius: 10px;
 }
 
-body.contact-page {
-  background-color: var(--primary-color);
-  box-shadow: var(--default-box-shadow);
-}
-
 .contact-container {
   display: block;
-  max-width: 100%;
+  max-width: 80%;
+  border-radius: 8px;
   margin: 60px auto;
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
   padding: 30px 30px 100px 30px;
 }
 
-.contact-container a.social-links {
+.contact-container a .contact-page-icon {
+  margin: 0 30px 0 30px;
+  padding: 12px 20px;
+  border-radius: 50%;
   color: var(--primary-color);
+  background-color: var(--secondary-color);
+  font-size: 30px;
+  transition: all 100ms ease-in-out;
+}
+
+
+.contact-container a.social-links {
+  color: var(--secondary-color);
   text-decoration: none;
   font-size: 28px;
   font-weight: 900;
+  letter-spacing: 8px;
 }
 
 .contact-container a.social-links:hover {
   opacity: 0.9;
 }
-
-.contact-container a span {
- padding-left: 11px;
-}
-
-
-
 
 @media (max-width: 768px) {
   header {
